# django-pbn-client

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/django_pbn_client/: __init__.py  download.py  models.py  persistence.py
tests/: test_django_pbn_client_download.py  test_django_pbn_client_models.py  test_django_pbn_client_pages.py  test_django_pbn_client_persistence.py
