[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-pbn-client"
version = "0.2.1"
description = "Django persistence helpers for data downloaded from PBN"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Michał Pasternak", email = "michal.dtz@gmail.com" },
]
keywords = ["django", "pbn", "bibliography", "polon", "persistence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "Django>=5.2,<5.3",
    "pbn-client>=0.2,<0.3",
]

[project.urls]
Homepage = "https://github.com/iplweb/django-pbn-client"
Repository = "https://github.com/iplweb/django-pbn-client"
Issues = "https://github.com/iplweb/django-pbn-client/issues"

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
    "pytest-django>=4.9,<5",
]

# UWAGA: NIE dodawać tu [tool.uv.sources] z lokalnym path do pbn-client.
# `pbn-client` jest publikowany na PyPI i stamtąd rozwiązywany. Lokalny
# path-source psuje konsumpcję tego pakietu przez git-source (uv czyta go z
# repozytorium i próbuje rozwiązać nieistniejący podkatalog). Do lokalnego
# co-devu pbn-client użyj `uv pip install -e ../pbn-client` w swoim venv.

[tool.hatch.build.targets.wheel]
packages = ["src/django_pbn_client"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src", "tests"]
DJANGO_SETTINGS_MODULE = "package_test_settings"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
